--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,13 +52,21 @@ dependencies:
   permission_handler: ^11.3.1
   geolocator: ^12.0.0
   local_auth: ^2.2.0
-  # mapbox_maps_flutter: ^2.1.0
   google_maps_flutter: ^2.7.0
   geocoding: ^3.0.0
+  firebase_core: ^3.2.0
+  firebase_messaging: ^15.0.3
+  flutter_local_notifications: ^17.2.1+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/vectors/icone.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
