--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_messaging: ^15.0.3
   flutter_local_notifications: ^17.2.1+2
+  screenshot: ^3.0.0
+  share_plus: ^9.0.0
+  path_provider: ^2.1.3
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
